--- a/xscansortwidget.ui
+++ b/xscansortwidget.ui
@@ -36,7 +36,14 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QComboBox" name="comboBoxFlags"/>
+      <widget class="QComboBox" name="comboBoxFlags">
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>0</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
